--- a/dir/languages/javascript/ajax/ajax-crash-course/_project/package.json
+++ b/dir/languages/javascript/ajax/ajax-crash-course/_project/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "node-php": "0.0.1"
   }
 }
