--- a/dir/languages/javascript/ecmascript/compile-es6-with-babel/_project/package.json
+++ b/dir/languages/javascript/ecmascript/compile-es6-with-babel/_project/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "supermario",
+  "name": "babelcompile",
   "version": "1.0.0",
-  "description": "HTML5 Game Dev",
+  "description": "Compile code using babel",
   "main": "app.js",
   "scripts": {
-    "build": "babel --presets es2015 src -d public"
+    "build": "babel src -d public/js"
+  },
+  "scripts": {
+    "build": "babel --presets es2015 src -d public/js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/elwoodberry/javascript.git#javascript"
   },
-  "author": "Elwood Berry (me@elwoodberry.com)",
+  "author": "Elwood Berry",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/elwoodberry/javascript/issues"
   },
   "homepage": "https://github.com/elwoodberry/javascript/tree/javascript#readme",
-  "dependencies": {
-    "express": "^4.16.2",
-    "pug": "^2.0.0-rc.4"
-  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-node6": "^11.0.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
+    "babel-preset-es2015": "^6.24.1"
   }
 }
